# nanopb

./: .gitignore  CMakeLists.txt
client/: CMakeLists.txt  client.c  client.h  client_helper.c  requests.c  requests.h
headers/: agent.pb.c  agent.pb.h  error.pb.c  error.pb.h  generate_headers.sh  genop.pb.c  genop.pb.h  image.pb.c  image.pb.h  profiling.pb.c  profiling.pb.h  resources.pb.c  resources.pb.h  session.pb.c  session.pb.h  tensorflow.pb.c  tensorflow.pb.h  torch.pb.c  torch.pb.h
helper/: CMakeLists.txt  request  request.c  response.c
proto/: agent.proto  genop.proto  image.proto  session.proto  tensorflow.proto  torch.proto  x_addressbook.proto
server/: CMakeLists.txt  python_bindings.c  python_bindings.h  responses.c  responses.h  server.c  server.h  server_helper.c
server_python/: server.py
